# sales-analysis

./: .env.example  .gitignore  .ruff.toml  LICENSE  README.md  pyproject.toml
src/: app.py  index.py
src/commands/: analyze_trends_command.py  download_command.py  sales_channel_command.py
src/console/: app.py
src/domains/: analyze_trends.py  sales_channels.py
src/services/chart/: bar_chart.py
src/services/loader/: load_dataset.py
src/services/repository/: download_repository.py
src/services/writter/: csv_writter.py
src/utils/: console_display.py
